2013-08-29  Vineet Gupta <vgupta@synopsys.com>

	* arc-versions.sh: Update uClibc branch name to new naming convention.

2013-08-24  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Eliminate dependency on bash extensions when
	testing for pre-set environment variables.

2013-08-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Move use of all relevant env variables to after
	define-release.sh.

2013-08-20  Simon Cook  <simon.cook@embecosm.com>

	* arc-versions.sh: Update branch names to new naming convention.

2013-08-14 Anton Kolesov   <akolesov@synopsys.com>

	* build-all.sh: Unset some environment variables for example CROSS_COMPILE
	and ARCH. Tools makefiles recognize these variable and might use them in
	an undesirable way. For example CROSS_COMPILE has a predence over
	toolchain we are building and this for example might cause a big endian
	toolchain to have little endian standard libraries.

2013-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Switch to use arc-gdb-mainline for GDB
	development.

2013-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* arc-clone-all.sh: More comprehensive version of the script.
	* README.md: Use HTTPS versions of repository URLs.

2013-07-17  Simon Cook  <simon.cook@embecosm.com>

	* build-all.sh: Add --disable-werror and --no-disable-werror options.
	* build-elf32.sh: Add DISABLEWERROR to configure.
	* build-uclibc.sh: Likewise.

2013-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-all.sh: Don't symlink-all newlib, instead just symlink the
	top level directories.

2013-07-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Remove --disable-werror from configuration.
	* build-uclibc.sh: Likewise.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* README.md: Updated for mainline branch.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Use define-release.sh and associated